add html and css file

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link rel="stylesheet" href="style/file.css">
 </head>
 
 <body>
@@ -12,6 +13,23 @@
     <h1>LOREM 5
 
     </h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor nulla nesciunt omnis quas et facilis autem aperiam
+      quidem laudantium inventore rerum, expedita dolorem. Praesentium architecto commodi necessitatibus quas deserunt!
+      Ipsum odit odio voluptatem recusandae assumenda quaerat cupiditate dolorum maiores similique ipsam quasi quo
+      exercitationem, laborum, facere rem dolorem? Quidem, dicta.</p>
+  </div>
+  <div>
+    <h1>NEW REPOSITORY
+    </h1>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nulla exercitationem harum maxime facere culpa fugit
+      sed accusantium asperiores perspiciatis eaque.</p>
+  </div>
+  <div>
+    <h1>NEW OFFENCE</h1>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quos quis quaerat quia repellendus animi hic vitae eius
+      voluptas sapiente. Temporibus possimus nemo asperiores perspiciatis adipisci optio fugiat reiciendis tempore quae
+      beatae vero, quis ipsum officiis voluptatibus ad dolorum molestiae nulla? Maxime recusandae itaque ab deleniti
+      necessitatibus, iste aut molestias nisi.</p>
   </div>
 </body>
 
